<resources>
    <string name="app_name">TaskAID</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">Device not BLE compatible</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_scan">Start Scanning</string>
    <string name="stop_scan">Stop Scanning</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_task_list">Task list</string>
    <string name="title_activity_selector">SelectorActivity</string>
    <string name="action_add_task">Add</string>
    <string name="action_remove_task">Remove</string>
    <string name="btn_delete">Del</string>
    <string name="action_cancel_remove">Cancel</string>
    <string name="title_activity_add_task">Add</string>
    <string name="dummy_beacon_address">00:00:00:00:00</string>
    <string name="tv_beacon_address">Beacon address:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="tv_task_name">Task name:</string>
    <string name="invalid_name">No task name entered</string>
    <string name="invalid_beacon">Choose a beacon</string>
    <string name="title_activity_beacon_selector">Select beacon</string>
    <string name="edit">Edit</string>
    <string name="action_add_card">Add card</string>
    <string name="action_remove_card">Remove card</string>
    <string name="no_cards">No cards found</string>
    <string name="title_activity_add_card">Add Card</string>
    <string name="dummy_card">Card name</string>

</resources>
