<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.ehb.taskaid.UI.AddCardActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/btnAdd"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10sp"
            android:onClick="onBtnAddClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/btnAdd"
            android:layout_marginLeft="10sp"
            android:onClick="onBtnCancelClick"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dummy_card"
        android:id="@+id/tvCardText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp"
        android:clickable="true"
        android:onClick="onTvCardTextClick"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imCardPicture"
        android:layout_toEndOf="@+id/tvCardText"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCardText"
        android:src="@drawable/no_image"
        android:background="@color/dim_foreground_material_dark"
        android:onClick="onImCardPictureClick"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edCardText"
        android:layout_above="@+id/imCardPicture"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true" />

</RelativeLayout>
